Resolves: tdf#113336 avoid crash during teardown

Change-Id: Icdebd5aca1a2bdaefb904d153ca97a6cc56ac7ff